udf-macros/tests/fail/shortform_not_pub.rs
// Functions must be public

#[udf_macros::udf]
fn foo() {}

fn main() {}
