udf-macros/tests/fail/shortform_not_pub.stderr
error: UDFs must be marked `pub`
 --> tests/fail/shortform_not_pub.rs:3:1
  |
3 | #[udf_macros::udf]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `udf_macros::udf` (in Nightly builds, run with -Z macro-backtrace for more info)
